# MTSVRC

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh
doc/examples/: CMakeLists.txt  nvvl_loader.cpp  nvvl_loader.h
include/: PictureSequence.h  VideoLoader.h
pynvvl/pynvvl/: _nvvl.pyx
pytorch/nvvl/: __init__.py  dataset.py  loader.py
src/: VideoLoader.cpp
src/detail/: Decoder.h  NvDecoder.cpp  Queue.h
src/detail/cuda/: imgproc.cu
